terraform/vpc.tf
resource "aws_vpc" "vpc" {
  cidr_block           = "10.0.0.0/16"
  enable_dns_hostnames = true
  enable_dns_support   = true
  instance_tenancy     = "default"

  tags = {
    Name                                                        = "${var.vpc_name}-${var.environment}-vpc"
    Environment                                                 = var.environment
    "kubernetes.io/cluster/${var.vpc_name}-${var.environment}-cluster" = "shared"
  }
}
